syntax = "proto3";

package easypwn;

option go_package = "easypwn/internal/api";

service Mailer {
  rpc SendConfirmationEmail(SendConfirmationEmailRequest) returns (SendConfirmationEmailResponse);
  rpc GetConfirmationCode(GetConfirmationCodeRequest) returns (GetConfirmationCodeResponse);
}

message SendConfirmationEmailRequest {
  string email = 1;
}

message SendConfirmationEmailResponse {
  string code = 1;
}

message GetConfirmationCodeRequest {
  string email = 1;
}

message GetConfirmationCodeResponse {
  string code = 1;
}